Made footer's size responsive - still need to fix position on mobile view.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,11 @@
 .Footer{
-    background-image: linear-gradient(#081C15, #1B4332, #2D6A4F);
+    background-image: linear-gradient( #282A36, #99E755);
     margin-top: 1rem;
     padding: 2rem;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    position:relative;
+    bottom: 0px;
+    
+    width:100%;
     height: 50px;
     display:inline-flex;
     justify-content: center;
@@ -16,4 +17,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width:500px){
+  .Footer {
+    padding:0em;
+  }
+  .SocialMediaSection {
+    padding: 5px 10px;
+  }
+
+  .Copyright{
+    font-size: 0.7em;
+  }
 }
